Use SIGINT instead of SIGTERM to stop the build. Based on a patch from Harald Fernengel. Fixes bug 71132

BUG: 71132